fix for safari mobile
in order to get the proportions of the mobile viewport on iOS right,
one of the flex elements needs to have a width set (flex-basis) to avoid
the text from getting squished, and to avoid the need of paddings

--- a/styles/header.styl
+++ b/styles/header.styl
@@ -17,6 +17,9 @@
     width auto
     height 100%
     max-height 150px
+    +at('mobile')
+      flex-grow 0
+      flex-basis 148px
     +above('tablet')
       max-height 175px
     +above('fablet')
